--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -101,96 +101,178 @@
       <section class="pets-in-zoo">
         <div class="container content">
           <h2 class="heading">pets in zoo</h2>
-          <div class="slider-box__wrapper">
-            <div class="slider-box">
-              <button class="arrow arrow-left">
-                <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
-              </button>
-              <div class="cards">
-                <div class="card-wrapper">
-                  <a class="card" href="../zoos/panda/panda.html">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/panda.jpg" alt="panda" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Panda, China</p>
-                      </figcaption>
-                    </figure>
-                  </a>
+          <div class="auto-carousel">
+            <div class="slider-box__wrapper">
+              <div class="slider-box" id="carousel">
+                <div class="cards" id="content">
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/panda/panda.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/panda.jpg" alt="panda" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Panda, China</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/alligator/alligator.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Alligator, USA</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/gorilla/gorilla.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Gorilla, Eastern DRC</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/elephant.jpg" alt="elephant" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Elephant, South Africa</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Polar Bear, Canada</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/eagle/eagle.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Bald eagle, USA</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Arctcic snowy owl, Alaska</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/penguin.jpg" alt="penguin" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Penguin, USA</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/panda/panda.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/panda.jpg" alt="panda" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Panda, China</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/alligator/alligator.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Alligator, USA</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/gorilla/gorilla.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Gorilla, Eastern DRC</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/elephant.jpg" alt="elephant" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Elephant, South Africa</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Polar Bear, Canada</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="../zoos/eagle/eagle.html">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Bald eagle, USA</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Arctcic snowy owl, Alaska</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
+                  <div class="card-wrapper">
+                    <a class="card" href="javascript:void(0)">
+                      <figure>
+                        <img class="card-image" src="../../assets/images/pets-slider/penguin.jpg" alt="penguin" />
+                        <figcaption class="card-caption">
+                          <p class="card-name">Penguin, USA</p>
+                        </figcaption>
+                      </figure>
+                    </a>
+                  </div>
                 </div>
-                <div class="card-wrapper">
-                  <a class="card" href="../zoos/alligator/alligator.html">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/alligator.jpg" alt="alligator" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Alligator, USA</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
-                <div class="card-wrapper">
-                  <a class="card" href="../zoos/gorilla/gorilla.html">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Gorilla, Eastern DRC</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
-                <div class="card-wrapper">
-                  <a class="card" href="javascript:void(0)">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/elephant.jpg" alt="elephant" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Elephant, South Africa</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
-                <div class="card-wrapper">
-                  <a class="card" href="javascript:void(0)">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Polar Bear, Canada</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
-                <div class="card-wrapper">
-                  <a class="card" href="../zoos/eagle/eagle.html">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Bald eagle, USA</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
-                <div class="card-wrapper">
-                  <a class="card" href="javascript:void(0)">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Arctcic snowy owl, Alaska</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
-                <div class="card-wrapper">
-                  <a class="card" href="javascript:void(0)">
-                    <figure>
-                      <img class="card-image" src="../../assets/images/pets-slider/penguin.jpg" alt="penguin" />
-                      <figcaption class="card-caption">
-                        <p class="card-name">Penguin, USA</p>
-                      </figcaption>
-                    </figure>
-                  </a>
-                </div>
+                <button class="arrow arrow-left" id="arrow-prev">
+                  <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
+                </button>
+                <button class="arrow arrow-right" id="arrow-next">
+                  <img src="../../assets/icons/buttons/arrow-right.svg" alt="" />
+                </button>
               </div>
-              <button class="arrow arrow-right">
-                <img src="../../assets/icons/buttons/arrow-right.svg" alt="" />
-              </button>
             </div>
           </div>
         </div>
@@ -222,9 +304,6 @@
           <h2 class="heading heading--testimonials">testimonials</h2>
           <div class="feedback-slider-box_wrapper">
             <div class="feedback-slider-box">
-              <button class="arrow arrow-left">
-                <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
-              </button>
               <div class="feedback__slides">
                 <div class="feedback__card">
                   <div class="card-info">
@@ -279,10 +358,13 @@
                   </p>
                 </div>
               </div>
-              <button class="arrow arrow-right"><img src="../../assets/icons/buttons/arrow-right.svg" alt="" /></button>
+              <button class="arrow arrow-left" id="arrow-left">
+                <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
+              </button>
+              <button class="arrow arrow-right" id="arrow-right"><img src="../../assets/icons/buttons/arrow-right.svg" alt="" /></button>
             </div>
             <div class="feedback__button">
-              <a class="button leave-feedback__button" href="javascript:void(0)">Leave feedback</a>
+              <button class="button leave-feedback__button" id="leave-feedback" href="javascript:void(0)">Leave feedback</button>
             </div>
           </div>
         </div>
@@ -299,7 +381,7 @@
             </div>
             <div class="footer-links__links">
               <div class="donate__button donate__button--left">
-                <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
+                <button class="button button--donate" id="button-donate">Donate for volunteers</button>
               </div>
               <nav class="footer-nav">
                 <ul class="menu footer-menu">
@@ -363,6 +445,66 @@
         </div>
       </div>
     </footer>
+    <div class="form-feedback hidden" id="form-feedback">
+      <div class="form-feedback--cross"></div>
+      <form class="form-content" action="">
+        <input type="text" class="input" placeholder="Name" id="name" required />
+        <input type="email" class="input" placeholder="Email" id="email" required />
+        <textarea id="text-feedback" class="textarea textarea-feedback" maxlength="300" placeholder="Your text here (300 max)" required></textarea>
+        <button class="button invalid" id="send" type="submit">Submit</button>
+      </form>
+    </div>
+    <div class="form-donate hidden" id="form-donate">
+      <div class="form-feedback--cross"></div>
+      <form class="form-donate-content" action="">
+        <select name="animal-list" id="animal-list">
+          <option value="alligator">Alligator</option>
+          <option value="panda">Panda</option>
+          <option value="eagle">Eagle</option>
+          <option value="gorilla">Gorilla</option>
+        </select>
+        <input type="number" min="1" max="9999" class="input" placeholder="Amount" id="amount" required />
+        <select name="currency" id="currency">
+          <option value="usd">USD</option>
+          <option value="eur">EUR</option>
+        </select>
+        <textarea id="text-donate" class="textarea textarea-donate" maxlength="280" placeholder="Your text here"></textarea>
+        <button class="button invalid" id="next" type="button">Next</button>
+      </form>
+    </div>
+    <div class="form-pay hidden" id="form-pay">
+      <div class="form-feedback--cross"></div>
+      <form class="form-pay-content" action="">
+        <div class="form-background-card">
+          <div class="card-number">
+            <input type="tel" pattern="\d*" maxlength="19" class="input" placeholder="Card Number" id="card-number" required />
+          </div>
+          <div class="card-month">
+            <input type="tel" pattern="\d*" maxlength="2" class="input" placeholder="MM" id="card-month" required />
+          </div>
+          <div class="card-year">
+            <input type="tel" pattern="\d*" maxlength="2" class="input" placeholder="YY" id="card-year" required />
+          </div>
+          <div class="cardholder-name">
+            <input type="text" class="input" placeholder="Cardholder Name" id="cadholder-name" required />
+          </div>
+        </div>
+        <div class="form-background-card-back">
+          <div class="cvc">
+            <div class="cvc-background--bold-stripe"></div>
+            <div class="cvc-background--thin-stripe thin-stripe-1"></div>
+            <div class="cvc-background--thin-stripe thin-stripe-2"></div>
+            <div class="cvc-background--thin-stripe thin-stripe-3"></div>
+            <div class="cvc-background--thin-stripe thin-stripe-4"></div>
+            <input type="tel" pattern="\d*" maxlength="3" placeholder="CVC" name="cvc" id="cvc" />
+          </div>
+        </div>
+        <button class="button invalid" id="pay" type="submit">Donate</button>
+      </form>
+    </div>
+    <div class="cover hidden" id="cover"></div>
     <script src="./index.js"></script>
+    <script src="./pop-up.js"></script>
+    <script src="./carousel-pets-in-zoo.js"></script>
   </body>
 </html>
